# qumir

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  package.json
qumir/: CMakeLists.txt  align.h  error.cpp  error.h  future.cpp  future.h  location.h  module_manager.h  optional.h
qumir/codegen/llvm/: CMakeLists.txt  llvm_asm_printer.cpp  llvm_codegen.cpp  llvm_codegen.h  llvm_codegen_impl.h  llvm_initializer.cpp  llvm_initializer.h  llvm_runner.cpp  llvm_runner.h  llvm_wasm_ld.cpp  llvm_wasm_ld.h
qumir/frontend/: compose.cpp  compose.h  source_module_loader.cpp  source_module_loader.h
qumir/ir/: builder.cpp  builder.h  eval.cpp  eval.h  ffi.cpp  ffi.h  type.cpp  type.h  vmcompiler.cpp  vmcompiler.h  vminstr.cpp  vminstr.h
qumir/ir/lowering/: lower_ast.cpp  lower_ast.h
qumir/ir/passes/analysis/: cfg.cpp  cfg.h
qumir/ir/passes/transforms/: const_fold.cpp  const_fold.h  de_ssa.cpp  de_ssa.h  locals2ssa.cpp  locals2ssa.h  pipeline.cpp  pipeline.h  renumber_regs.cpp  renumber_regs.h
qumir/modules/: complex.oz  modalias  module.cpp  module.h
qumir/modules/colors/: colors.cpp  colors.h
qumir/modules/complex/: complex.cpp  complex.h
qumir/modules/drawer/: drawer.cpp  drawer.h
qumir/modules/keyboard/: keyboard.cpp  keyboard.h
qumir/modules/painter/: painter.cpp  painter.h
qumir/modules/robot/: robot.cpp  robot.h
qumir/modules/system/: system.cpp  system.h
qumir/modules/turtle/: turtle.cpp  turtle.h
qumir/parser/: ast.cpp  ast.h  lexer.cpp  lexer.h  lexer_base.cpp  lexer_base.h  operator.h  parser.cpp  parser.h  pragma.h  type.cpp  type.h
qumir/parser/core/: lexer.cpp  lexer.h  parser.cpp  parser.h  printer.cpp  printer.h
qumir/paser/: lexer.cpp  lexer.h
qumir/runner/: runner_ir.cpp  runner_ir.h  runner_llvm.cpp  runner_llvm.h
qumir/runtime/: CMakeLists.txt  array.cpp  array.h  colors.cpp  colors.h  complex.cpp  complex.h  drawer.cpp  drawer.h  future.cpp  future.h  io.cpp  io.h  math.cpp  math.h  painter.cpp  painter.h  robot.cpp  robot.h  runtime.cpp  runtime.h  string.cpp  string.h  turtle.cpp  turtle.h
qumir/semantics/: return_analysis.cpp
qumir/semantics/definite_assignment/: definite_assignment.cpp  definite_assignment.h
qumir/semantics/kumir/: pipeline.cpp  pipeline.h
qumir/semantics/lifetime/: pass.cpp  pass.h  synthetic_name_generator.cpp  synthetic_name_generator.h  type_traits.cpp  type_traits.h  validator.cpp  validator.h
qumir/semantics/name_resolution/: name_resolver.cpp  name_resolver.h  symbol_info.h
qumir/semantics/return_normalization/: pass.cpp  pass.h
qumir/semantics/transform/: transform.cpp  transform.h
qumir/semantics/type_annotation/: coercions.cpp  coercions.h  type_annotation.cpp  type_annotation.h
service/: CMakeLists.txt  build-docs.js  server.cpp  server.py
service/static/: app.js  docs  docs.html  docs.js  index.html  io_wrapper.js  styles.css  tour.js
service/static/runtime/: array.js  colors.js  complex.js  drawer.js  future.js  io.js  keyboard.js  math.js  painter.js  result.js  robot.js  string.js  turtle.js
test/: CMakeLists.txt  test_cfg.cpp  test_compose.cpp  test_core_lexer.cpp  test_exec.js  test_ffi.cpp  test_field_access.cpp  test_future.cpp  test_if_expr.cpp  test_kernel_ast.cpp  test_lexer.cpp  test_lifetime_lowering.cpp  test_lifetime_pass.cpp  test_lifetime_traits.cpp  test_lifetime_validator.cpp  test_module_exec.cpp  test_name_resolver.cpp  test_printer.cpp  test_reg.cpp  test_semantic_pipeline.cpp  test_source_module_loader.cpp
test/regtest/cases/array/: 1d.kum  2d.kum  3d.kum  bool.kum
test/regtest/cases/assign/: call_expr.kum  decl_assign.kum  int_expr.ast  int_expr.kum  logical.kum  mod_expr.kum  num.kum  num_float.kum  pow_expr.kum
test/regtest/cases/colors/: array.kum  array_rgb.kum  cmyk.kum  constants.kum  decompose.kum  hsl.kum  hsv.kum  print.kum  rgb.kum
test/regtest/cases/complex/: array.kum  basic.kum  casts.kum  comparisons.kum  functions.kum  literal_suffix.kum  logical.kum  operators.kum  ref_args.kum
test/regtest/cases/corelang/: array_ref.oz  array_struct_multi_ref.oz  array_struct_ref.oz  bitcast.oz  block_expr.oz  call_named_type_mismatch_diagnostic.oz  cast_named_type_mismatch_diagnostic.oz  casts.oz  extern_struct_abi.oz  extern_two_char.oz  generic_arith.oz  generic_cache_crosssite.oz  generic_identity.oz  generic_overload_fallback.oz  generic_pair.oz  generic_transitive.oz  if_named_type_mismatch_diagnostic.oz  implicit_return.oz  indirect_array.oz  indirect_struct.oz  indirect_value.oz  int_cast_ext.oz  ints.oz  lifetime_last_assert.oz  overload_no_match_argument_types.oz  parametric_type_concrete.oz  parametric_type_const_params_decimal.oz  parametric_type_const_params_decimal_mul_decimal_error.oz  parametric_type_generic_fun.oz  parametric_type_generic_operator.oz  parametric_type_literal_inference.oz  parametric_type_nullable_bool_valid_o3.oz  parametric_type_nullable_float_literal_inference.oz  parametric_type_nullable_mul_return_inference.oz  parametric_type_nullable_null_tag.oz  parametric_type_nullable_operator.oz  (+10 more)
(+704 files in other folders)
