add_library(qumir
    modules/system/system.h
    modules/system/system.cpp
    modules/module.h
    modules/module.cpp
    parser/ast.h
    parser/ast.cpp
    parser/lexer.h
    parser/lexer.cpp
    parser/operator.h
    parser/operator.cpp
    parser/parser.h
    parser/parser.cpp
    parser/type.h
    parser/type.cpp
    runner/runner_ir.h
    runner/runner_ir.cpp
    runner/runner_llvm.h
    runner/runner_llvm.cpp
    ir/lowering/lower_ast.h
    ir/lowering/lower_ast.cpp
    ir/passes/analysis/cfg.h
    ir/passes/analysis/cfg.cpp
    ir/passes/transforms/locals2ssa.h
    ir/passes/transforms/locals2ssa.cpp
    ir/builder.h
    ir/builder.cpp
    ir/eval.h
    ir/eval.cpp
    ir/type.h
    ir/type.cpp
    ir/vmcompiler.h
    ir/vmcompiler.cpp
    ir/vminstr.h
    ir/vminstr.cpp
    semantics/name_resolution/name_resolver.h
    semantics/name_resolution/name_resolver.cpp
    semantics/transform/transform.h
    semantics/transform/transform.cpp
    semantics/type_annotation/type_annotation.h
    semantics/type_annotation/type_annotation.cpp
    error.h
    error.cpp
    location.h
    optional.h
)
target_include_directories(qumir PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
target_compile_features(qumir PUBLIC cxx_std_23)
add_subdirectory(runtime)
add_subdirectory(codegen/llvm)
